tests/invalid/Final_Invalid_2.whiley
function f(int x) -> (int r):
    //
    final int y = x
    y = y + 1
    //
    return x
